manifests/inferenceserver/base/rhaiis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhaiis
  labels:
    app: rhaiis
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: rhaiis
  template:
    metadata:
      labels:
        app: rhaiis
    spec:
      tolerations:
        - key: "nvidia.com/gpu"
          operator: "Exists"
          effect: "NoSchedule"
      volumes:
        - name: model-volume
          persistentVolumeClaim:
            claimName: models
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: "2Gi"
      serviceAccountName: default
      containers:
        - name: rhaiis
          image: 'registry.redhat.io/rhaiis/vllm-cuda-rhel9:3'
          imagePullPolicy: Always
          command:
            - python
            - '-m'
            - vllm.entrypoints.openai.api_server
          args:
            - '--port=8000'
            - '--tensor-parallel-size=1'
          resources:
            limits:
              cpu: '10'
              nvidia.com/gpu: '1'
              memory: 16Gi
            requests:
              cpu: '1'
              memory: 6Gi
              nvidia.com/gpu: '1'
          volumeMounts:
            - name: model-volume
              mountPath: /model
            - name: shm
              mountPath: /dev/shm 
      restartPolicy: Always
